# PodcastWhisperer

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
podcast_whisperer/: __init__.py  app.py  auth.py  database.py  init.sql  main.py  site.py  structures.py  transcibe.py  transcribe.py
podcast_whisperer/templates/: base.html
podcast_whisperer/templates/auth/: login.html
podcast_whisperer/templates/site/: episode_list.html  index.html  new_show.html  search.html  transcribe.html  transcript.html
tests/: conftest.py  data.sql  test_auth.py  test_db.py  test_factory.py  test_site.py
