[metadata]
name = podcast_whisperer
version = 0.1.0
url = https://github.com/garlic-hub/PodcastWhisperer


[options]
include_package_data = True
packages = podcast_whisperer
python_requires = >=3.7
install_requires =
    flask
    whisper @ git+https://github.com/openai/whisper.git

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = podcast_whisperer

[flake8]
max-line-length = 120
